--- a/css/application.css
+++ b/css/application.css
@@ -1,13 +1,49 @@
 .clear {
 	clear: both;
 }
+html {
+	height: 100%;
+}
 body {
 	font-size: 14pt;
 	font-family: sans-serif;
 	line-height: 1.2em;
 	width: 100%;
+	height: 100%;
 	max-width: 480px;
 	padding: 10px;
+	color: white;
+	background-color: #1d1756;
+	background-image: -webkit-linear-gradient(top, #1d1756, #0a081c);
+	background-image: -moz-linear-gradient(top, #1d1756, #0a081c);
+}
+header > h1 {
+	font-size: 30px;
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: bold;
+	text-shadow: 0px 0px 10px white;
+}
+nav {
+	margin-top: 10px;
+	margin-bottom:10px;
+}
+nav > a {
+	color: white;
+	display: block;
+	float: left;
+	width: 32%;
+	text-align: center;
+	margin-left: 2%;
+	background-color: rgba(0,0,0,0.3);
+	border: 1px solid rgba(255,255,255,0.3);
+	text-decoration: none;
+	font-weight: bold;
+	font-size: 20px;
+	padding: 5px;
+}
+nav > a:first-child {
+	margin-left: 0px;
 }
 input {
 	outline: none;
@@ -15,69 +51,98 @@ input {
 	font-size: 14pt;
 	padding: 3px;
 }
+
+#search, #search_submit{
+	height:1.5em;
+	font-size:20px;
+	
+}
+
+#search {
+	float: left;
+	width: 80%;
+}
+
+#search_submit {
+	color: white;
+	display: block;
+	float: left;
+	width: 20%;
+	text-align: center;
+	background-color: rgba(0,0,0,0.3);
+	border: 1px solid rgba(255,255,255,0.3);
+	text-decoration: none;
+	font-weight: bold;
+	font-size: 20px;
+	padding: 5px;
+	line-height:.9em;
+}
+#results{
+	margin-top:10px;
+	clear:both;
+}
+
 #results > li {
 	clear: both;
 }
 #results > li > .inputs {
 	float: right;
-	white-space:nowrap;
+	white-space: nowrap;
 }
-#results > li > .inputs > input{
+#results > li > .inputs > input {
 	float: left;
-	background-color:#ffd300;
-	background-image:-webkit-linear-gradient(top, #ffd300, #ffde60);
-	border:1px solid #06266f;
+	background-color: #ffd300;
+	background-image: -webkit-linear-gradient(top, #ffd300, #ffde60);
+	border: 1px solid #06266f;
 }
-
-
-.artist{
-	background-color:#06266f;
-	color:#ffe773;
-	color:white;
-	padding:3px;
+.artist {
+	background-color: #06266f;
+	color: #ffe773;
+	color: white;
+	padding: 3px;
 }
-
 .song {
-	margin-left: 1em;	
+	margin-left: 1em;
 }
-
 .song_title {
 	padding: 4px;
 	float: left;
 }
-
-
-.sing.queued{
-	background-color:green;
+.sing.queued {
+	background-color: green;
 }
-
-.sing_later{
-	margin-right:0px;
+.sing_later {
+	margin-right: 0px;
 }
-
 #popup {
-	position:absolute;
-	border:1px solid black;
-	width:70%;
-	top:50px;
+	position: absolute;
+	border: 1px solid black;
+	width: 70%;
+	top: 50px;
 	left: 15%;
-	background-color:white;
+	background-color: white;
+	transition: all 1s ease;
+	-webkit-transition: all 1s ease;
+	-moz-transition: all 1s ease;
+	transform: translate3d(0px, -300px, 0px);
+	-webkit-transform: translate3d(0px, -300px, 0px);
+	-moz-transform: translate3d(0px, -300px, 0px);
 }
-
-#popup > label{
-	float:right;
+#popup.visible {
+	transform: translate3d(0px, 0px, 0px);
+	-webkit-transform: translate3d(0px, 0px, 0px);
+	-moz-transform: translate3d(0px, 0px, 0px);
 }
-
-#popup > input{
-	float:right;
+#popup > label {
+	float: right;
 }
-
-
-#popup > .inputs{
-	float:right;
-	clear:right;
+#popup > input {
+	float: right;
 }
-
-#popup > .inputs > input{
-	float:right;
+#popup > .inputs {
+	float: right;
+	clear: right;
+}
+#popup > .inputs > input {
+	float: right;
 }
