--- a/css/application.css
+++ b/css/application.css
@@ -10,6 +10,7 @@ body {
 	line-height: 1.2em;
 	width: 100%;
 	height: 100%;
+	min-width:365px;
 	max-width: 480px;
 	padding: 10px;
 	color: white;
